k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # Esta anotación es importante para que Minikube sepa que Nginx debe manejar este tráfico
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: gce
spec:
  rules:
  #- host: devops-lab.test  # dom random que apunta a localhost gracias al /etc/hosts
  - http:
    paths:
    - path: /
      pathType: ImplementationSpecific
      backend:
        service:
          name: frontend-service # servicio de front
          port:
            number: 3000 # port del service de front
    - path: /api
      pathType: ImplementationSpecific
      backend:
        service:
          name: backend-service # servicio de back
          port:
            number: 3001 # port del service de back
